# Disruption-ROS

./: CMakeLists.txt  README.md  coordinator_params.yaml  driver_params.yaml  lamp_params.yaml  package.xml  rviz_config.rviz  setup.py
launch/: system-hardware.launch  system-sim-in-loop.launch  system-simulated.launch
launch/coordinator/: coordinator.launch
launch/drivers/: drivers.launch
launch/mocap/: vrpn.launch
launch/robots/: robot_node.launch
launch/sim/: sim.launch
launch/spotlight/: spotlight.launch
scripts/: coordinator  lamp_base  lamp_bulb  lamp_tilt  robot_node  sim  spotlight_aimer  spotlight_state  spotlight_target
src/coordinator/: coordinator.py
src/drivers/: __init__.py  lamp_base.py  lamp_bulb.py  lamp_tilt.py  maestro.py  relay.py
src/robots/: Bird_Config.py  Frog_Config.py  Robot_Motions_Reader.py  Snake_Config.py  bird_config.json  frog_config.json  robot_node.py  run_script.py  show1.config  show1.py  snake_config.json
src/robots/rcp/: winch.py
src/robots/script/: Robot_Motions_Reader.py  primitives.py  script1.py  show1.poses
src/sim/: sim.py
src/spotlight/: spotlight_aimer.py  spotlight_state.py
src/spotlight_target/: spotlight_target.py
