<?xml version="1.0"?>
<package format="2">
  <name>rcp_spotlight</name>
  <version>0.6.1</version>
  <description>RCP Spotlight project.</description>

  <maintainer email="tscherli@andrew.cmu.edu">Tom Scherlis</maintainer>
  <author email="tscherli@andrew.cmu.edu">Tom Scherlis</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>

</package>
